# gets-api

./: .gitignore  Cargo.toml  README.md  Swagger.yml
.github/workflows/: rust.yml
docker/: docker-compose.yml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: autotests.rs  config.rs  handlers.rs  main.rs
src/entities/: beer.rs  mod.rs  prelude.rs
