[package]
name = "gets-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.5"
actix-files = "0.6.5"
actix-web = "4.4.0"
dotenvy = "0.15.7"
env_logger = "0.10.1"
rand = "0.8.5"
sea-orm = { version = "0.12.7", features = [
  "sqlx-postgres",
  "runtime-actix-native-tls",
  "macros",
], default-features = false}
serde = "1.0.193"
